# sindibad-a

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chainlit_app.py  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  run.ps1  vercel.json
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  graph.py  sindibad_agent.py
app/data/: loader.py
app/services/: analyzer.py  charts.py  dashboard.py  narrative.py  sbu_iso.py
app/static/: index.html
app/static/css/: dashboard.css
app/static/js/: dashboard.js
data/: Correlation_Data.csv  Doha_Oasis_Sindibad_Database.xlsx  Entity_Profile.csv  Evidence_Repository.csv  Finance.csv  ISO_Metric_Availability.csv  Metric_Map.csv  Monthly_HR.csv
docs/: DATA_MODEL.md  example_questions.md
scripts/: prepare_vercel.py
tests/: test_agent.py
