[project]
name = "Sindibad"
version = "0.1.0"
description = "Executive Strategic AI Advisor for Al Khebra Driving School"
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.vercel]
entrypoint = "app.main:app"

[tool.vercel.scripts]
build = "python scripts/prepare_vercel.py"

[tool.chainlit]
# Chainlit reads chainlit_app.py from project root
